# pyxis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.codex/: hooks.json
crates/agent-auth/: Cargo.toml
crates/agent-auth/examples/: login.rs
crates/agent-auth/src/: lib.rs  store.rs
crates/agent-auth/src/oauth/: mod.rs  openai_chatgpt.rs  pkce.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/prompts/: codex_finetuned.md  gpt5_generic.md
crates/agent-cli/src/: context.rs  interactive.rs  main.rs  prompt.rs  session.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  budget.rs  clock.rs  compaction.rs  deps.rs  error.rs  event.rs  guardrail.rs  lib.rs  message.rs  provider.rs  session.rs  tools.rs  transition.rs
crates/agent-mcp/src/: client.rs  config.rs  lib.rs  server.rs
crates/agent-mcp/tests/: config_load.rs  stdio_lifecycle.rs
crates/agent-provider/: Cargo.toml
crates/agent-provider/examples/: smoke.rs
crates/agent-provider/src/: chatgpt.rs  chatgpt_events.rs  chatgpt_request.rs  credential.rs  lib.rs
crates/agent-sandbox/: Cargo.toml
crates/agent-sandbox/src/: fs.rs  lib.rs  proxy.rs
crates/agent-session/src/: lib.rs
crates/agent-tools/src/: bash.rs  edit.rs  error.rs  glob.rs  grep.rs  path.rs  permission.rs  read.rs  registry.rs  tests_integration.rs  tool.rs  write.rs
crates/agent-tui/: Cargo.toml
crates/agent-tui/examples/: gallery.rs  input.rs  logo_lab.rs  transcript.rs  welcome.rs
crates/agent-tui/src/: app_event.rs  bottom_pane.rs  cache.rs  history_cell.rs  insert_history.rs  lib.rs  markdown.rs  render.rs  state.rs  streaming.rs  term.rs  terminal_viewport.rs  theme.rs
crates/agent-tui/src/bottom_pane/: tests.rs
docs/: ARCHITECTURE.md  DECISIONS.md  PROVIDERS.md  ROADMAP.md  codex-port-inventory.md  openai-subscription-auth.md
tasks/: prd-codex-tui-parity-status.json  prd-codex-tui-parity.md  prd-pyxis-status.json
