[package]
name = "agent-auth"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
url.workspace = true
thiserror.workspace = true
keyring.workspace = true
open.workspace = true
