[package]
name = "agent-provider"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

# Implémente le trait `Provider` du cœur (agent-core) : adapter `OpenAiChatGpt`
# (Responses API sur le backend ChatGPT, SSE stateless, ADR-10). Auth déléguée à
# `agent-auth`. Pas de dépendance TUI. Réseau via reqwest + eventsource-stream
# (PROVIDERS §1.1, sans SDK).
[dependencies]
agent-core.workspace = true
agent-auth.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures-util.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["stream"] }
eventsource-stream.workspace = true
thiserror.workspace = true
# US-029 : génération du session_id (UUID v4) pour prompt_cache_key. `rand` est
# déjà épinglé au workspace (agent-auth) → aucune nouvelle crate téléchargée.
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
