[package]
name = "agent-tui"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

# Frontend terminal (US-019). CLIENT du cœur : consomme `agent_core::AgentEvent`,
# décide seul du rendu (jamais d'ANSI venant du cœur). Stack Ratatui + crossterm.
# Esthétique : monochrome + un accent, épurée (pas de bordures lourdes).
[dependencies]
agent-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
